--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,13 @@ svg {
   flex-direction: column;
   align-items: center;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.button-row {
+  gap: 0.5em;
+  margin-bottom: 1em;
+}
